--- a/index.html
+++ b/index.html
@@ -396,20 +396,25 @@
         }
 
         .folder[data-app="true"] .folder-icon::after {
-            content: '⚡';
-            position: absolute;
-            bottom: 10px;
-            right: 10px;
-            font-size: 32px;
-            background: rgba(255, 255, 255, 0.9);
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-        }
+        content: '';  /* Remove the lightning emoji */
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        background: rgba(255, 255, 255, 0.9);
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+        /* Add background image properties */
+        background-image: url('openapp.png');
+        background-size: 24px 24px;  /* Adjust size as needed */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: rgba(255, 255, 255, 0.9);  /* Keep the white background */
+    }
 
         .folder-name {
             color: white;
@@ -921,40 +926,44 @@
             border: 1px solid rgba(59, 130, 246, 0.2);
         }
 
-        .notes-icon {
-            position: absolute;
-            top: 20px;
-            right: 20px;
-            width: 40px;
-            height: 40px;
-            background: rgba(255, 255, 255, 0.2);
-            border: 1px solid rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            transition: all 0.2s ease;
-            backdrop-filter: blur(10px);
-            z-index: 10;
-            font-size: 20px;
-            color: white;
-            opacity: 0;
-            transform: scale(0.8);
-            pointer-events: none;
-        }
+    .notes-icon {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    width: 100px;  /* Increased from 40px */
+    height: 100px; /* Increased from 40px */
+    /* Remove these bubble properties:
+    background: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 50%;
+    backdrop-filter: blur(10px); */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    z-index: 10;
+    background-image: url('notesicon.png');
+    background-size: 48px 48px; /* Increased from 24px to make icon bigger */
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0;
+    transform: scale(0.8);
+    pointer-events: none;
+}
 
-        .notes-icon.show {
-            opacity: 1;
-            transform: scale(1);
-            pointer-events: auto;
-        }
+.notes-icon.show {
+    opacity: 1;
+    transform: scale(1);
+    pointer-events: auto;
+}
 
-        .notes-icon:hover {
-            background: rgba(255, 255, 255, 0.3);
-            transform: scale(1.1);
-            box-shadow: 0 4px 20px rgba(255, 255, 255, 0.2);
-        }
+.notes-icon:hover {
+    /* Remove bubble hover effects:
+    background: rgba(255, 255, 255, 0.3);
+    box-shadow: 0 4px 20px rgba(255, 255, 255, 0.2); */
+    transform: scale(1.1);
+}
     </style>
 </head>
 <body>
@@ -1011,8 +1020,7 @@
     </div>
 
     <div id="notesIcon" class="notes-icon" onclick="toggleNotesInterface()">
-        📝
-    </div>
+</div>
 
     <div id="fsConsole" class="fs-console">
         <div class="fs-console-header" onmousedown="DragManager.start('console', document.getElementById('fsConsole'), event)">
@@ -1583,7 +1591,7 @@
                 'Support Center': { description: 'Help desk and customer support' }
             },
             'Logic': {
-                'Programming': {
+                'Code': {
                     'Assembly': { levels: 100, cover: 'Assembly.png' },
                     'Bash': { levels: 100, cover: 'Bash.png' },
                     'C': { levels: 100, cover: 'C.png' },
@@ -1634,8 +1642,7 @@
                     'Baking & Pastry': { levels: 40, cover: 'Baking.png' },
                     'Healthy Cooking': { levels: 20, cover: 'Healthy.png' }
                 },
-                'Code': { app: true, file: 'code.html' },
-                'fs Logic Builder': { app: true, file: 'logic-builder.html' }
+                ' Logic Builder': { app: true, file: 'logic-builder.html' }
             },
             'Mall': {
                 'Purchased': {
@@ -1655,7 +1662,7 @@
                     'From Designers': { description: 'Designer-created items you are selling' }
                 },
                 'fs Mall': { app: true, file: 'mall.html' },
-                'fs Mall Builder': { app: true, file: 'mall-builder.html' }
+                ' Mall Builder': { app: true, file: 'mall-builder.html' }
             },
             'Farm': {
                 'Crops': {
@@ -1696,8 +1703,8 @@
                 'fs Prompts Builder': { app: true, file: 'prompts.html' }
             },
             'Media': {
-                'Club Belong': { app: true, file: 'club-belong.html' },
-                'Fivetaps': { app: true, file: 'fivetaps.html' },
+                'TapStreams Builder': { app: true, file: 'club-belong.html' },
+                'TapMovies Builder': { app: true, file: 'fivetaps.html' },
                 'fs Media': { app: true, file: 'media.html' }
             },
             'Browser': {
@@ -2353,9 +2360,9 @@
                     icon = '<div class="nested-folder-icon"></div>';
                     subtitle = `${value.levels} Levels`;
                 } else if (isAppFile) {
-                    icon = '⚡';
+                    icon = '<img src="openapp.png" style="width: 24px; height: 24px;" alt="App">';
                     subtitle = 'Application';
-                } else if (isSubfolder) {
+                }else if (isSubfolder) {
                     icon = '<div class="nested-folder-icon"></div>';
                     subtitle = 'Folder';
                 } else if (value && value.description) {
@@ -2488,8 +2495,7 @@ function handleLevelClick(event, subjectName, levelNumber) {
             
             let content = `
                 <div class="notes-icon show" onclick="toggleNotesInterface()">
-                    📝
-                </div>
+</div>
                 
                 <div style="display: flex; align-items: center; gap: 30px; margin-bottom: 30px; padding: 20px;">
                     <div style="flex: 0 0 200px;">
@@ -3302,7 +3308,7 @@ if (subjectName === 'C' && typeof challengesData !== 'undefined') {
                         });
                     }
                 } else {
-                    const currentSubject = window.currentLevelInfo ? window.currentLevelInfo.subject : 'Programming';
+                    const currentSubject = window.currentLevelInfo ? window.currentLevelInfo.subject : 'Code';
                     const corrections = getLanguageCorrections(currentSubject);
                     container.innerHTML = `
                         <div class="notes-text-area" readonly style="background: rgba(255, 255, 255, 0.98); color: #374151; font-family: 'SF Mono', 'Monaco', 'Inconsolata', 'Roboto Mono', monospace; font-size: 13px; line-height: 1.6; white-space: pre-wrap; user-select: text; cursor: text; border: 1px solid rgba(34, 197, 94, 0.2);">
