--- a/logicbody.html
+++ b/logicbody.html
@@ -1413,8 +1413,8 @@ document.addEventListener('mousemove', function(e) {
     if (mouseDownOnNonInteractive && parent !== window) {
         parent.postMessage({
             action: 'updateDragFromIframe',
-            mouseX: e.pageX,
-            mouseY: e.pageY
+            mouseX: e.clientX,
+            mouseY: e.clientY
         }, '*');
     }
 }, true);
@@ -1423,8 +1423,8 @@ document.addEventListener('mouseup', function(e) {
     if (mouseDownOnNonInteractive && parent !== window) {
         parent.postMessage({
             action: 'endDragFromIframe',
-            mouseX: e.pageX,
-            mouseY: e.pageY
+            mouseX: e.clientX,
+            mouseY: e.clientY
         }, '*');
     }
     mouseDownOnNonInteractive = false;
