--- a/oldindex.html
+++ b/oldindex.html
@@ -557,7 +557,7 @@
   <nav class="top-nav fixed top-0 left-0 right-0 z-50 h-20">
     <div class="mx-auto h-full flex items-center justify-between px-4 sm:px-6">
       <div class="flex items-center gap-4">
-        <a href="index.html" class="flex items-center gap-3 group">
+        <a href="oldindex.html" class="flex items-center gap-3 group">
             <img
               src="logo.jpg" alt="Fromsupply Logo" class="h-10 w-10 object-contain rounded-md flex-shrink-0"
               id="logo-image" onerror="this.onerror=null; this.src='https://placehold.co/40x40/030712/FFFFFF?text=FS';"
