--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
 
 /* Mobile responsive styles - 50% scale approach */
 @media (max-width: 768px) {
+    html {
+        background-image: url('logicdefault.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: #1e3a8a;
+        background-attachment: fixed;
+    }
+    
     body {
         transform: scale(0.7);
         transform-origin: top left;
@@ -119,6 +128,15 @@
 }
 
 @media (max-width: 480px) {
+    html {
+        background-image: url('logicdefault.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-color: #1e3a8a;
+        background-attachment: fixed;
+    }
+    
     body {
         transform: scale(0.5);
         transform-origin: top left;
@@ -127,16 +145,21 @@
     }
 }
 
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            height: 100vh;
-            overflow: hidden;
-            background-image: url('logicdefault.jpg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-color: #1e3a8a; /* Fallback color */
-        }
+        html {
+    height: 100%;
+    overflow: hidden;
+}
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+    height: 100vh;
+    overflow: hidden;
+    background-image: url('logicdefault.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: #1e3a8a; /* Fallback color */
+}
 
         /* Fromsupply Console Styles */
         .fs-console {
