--- a/index.html
+++ b/index.html
@@ -2373,7 +2373,7 @@ handleTouchEnd(e) {
         'Harvesters': { levels: 25, cover: 'Harvesters.png' },
         'Irrigation': { levels: 18, cover: 'Irrigation.png' }
     },
-    'Join A4': { app: true, file: 'A4.html' },
+    'Join A4': { app: true, file: 'a4.html' },
     'fs Farms': { app: true, file: 'farms.html' },
     'fs Farms Builder': { app: true, file: 'farms-builder.html' }
 },
